<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="15dp"
    android:layout_height="wrap_content">

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:paddingTop="10dp"
       android:paddingBottom="10dp"
       android:paddingStart="15dp"
       android:paddingEnd="15dp"
       android:layout_height="match_parent">
       <TextView
           android:id="@+id/date"
           android:layout_width="wrap_content"
           android:fontFamily="@font/roboto_bold"
           android:textColor="@color/black"
           android:textSize="16sp"
           android:layout_height="wrap_content"
           android:text="@string/date"/>
       <TextView
           android:id="@+id/time"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/roboto"
           android:textColor="@color/black"
           android:textSize="16sp"
           android:text="@string/time"/>
       <TextView
           android:id="@+id/sensor"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/black"
           android:fontFamily="@font/roboto"
           android:textSize="16sp"
           android:text="@string/sensor_device_used"/>
       <TextView
           android:id="@+id/detection"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/roboto"
           android:textColor="@color/black"
           android:textSize="16sp"
           android:text="@string/detection_of"/>

       <LinearLayout
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="wrap_content"
               android:fontFamily="@font/roboto"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:textSize="16sp"
               android:text="@string/plant_status"/>
           <TextView
               android:id="@+id/status"
               android:clickable="false"
               android:layout_width="wrap_content"
               android:paddingStart="30dp"
               android:paddingEnd="30dp"
               android:paddingTop="3dp"
               android:paddingBottom="5dp"
               android:fontFamily="@font/roboto"
               android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
               android:textColor="@color/black"
               android:textAllCaps="false"
               android:textSize="16sp"
               android:background="@drawable/mild_pos"
               android:text="mild +ve"/>
       </LinearLayout>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textColor="@color/black"
           android:textSize="16sp"
           android:fontFamily="@font/roboto_bold"
           android:layout_marginTop="15dp"
           android:text="@string/recommendation"/>
       <TextView
           android:id="@+id/recommendation"
           android:layout_width="wrap_content"
           android:fontFamily="@font/roboto"
           android:layout_height="wrap_content"
           android:textColor="@color/black"
           android:textSize="16sp"
           android:text="Please try again later"/>
   </LinearLayout>

</androidx.cardview.widget.CardView>