<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="50dp"
    tools:context=".Activate">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="25sp"
            android:text="@string/activated" />

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:textSize="17sp"
            android:text="@string/activated_successfully" />


        <Button
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:text="@string/connect"/>
        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:background="@drawable/round_btn_gray"
            android:textSize="16sp"
            android:text="@string/not_now"/>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>