<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"

    tools:context=".activities.AddDevice">

    <LinearLayout
        android:id="@+id/another"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/time"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/add_device"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/roboto"
                android:text="@string/please_provide_the_device_sensor_id"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/device"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints="firstName"
                android:background="@drawable/round_shape"
                android:fontFamily="@font/roboto"
                android:hint="@string/device"
                android:inputType="textCapSentences"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/add_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_btn"
                android:fontFamily="@font/roboto"
                android:text="@string/register_device"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_btn_gray"
        android:fontFamily="@font/roboto"
        android:text="@string/not_now"
        android:textAllCaps="false"
        android:textSize="16sp" />


    <RelativeLayout
        android:id="@+id/aviReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF050505"
        android:clickable="true"
        android:focusable="true">

        <com.wang.avi.AVLoadingIndicatorView
            style="@style/AVLoadingIndicatorView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            app:indicatorColor="@color/success"
            app:indicatorName="BallPulseIndicator" />
    </RelativeLayout>

</RelativeLayout>