<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.Register">

    <LinearLayout
        android:id="@+id/regs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/register_and_activate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autofillHints="firstName"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="lastName"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/roboto"
            android:hint="@string/device"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_btn"
            android:fontFamily="@font/roboto"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/avi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF050505"
        android:clickable="true"
        android:focusable="true">

        <com.wang.avi.AVLoadingIndicatorView
            style="@style/AVLoadingIndicatorView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            app:indicatorColor="@color/success"
            app:indicatorName="BallPulseIndicator" />
    </RelativeLayout>
</RelativeLayout>